tests/neg/type-param-bounds.stk.ignore
fun foo[T <: {a: Int}](x: T): T = x.a  // error

fun test1[X, Y <: X](x: X, y: Y): X = y

type Tuple2[S <: {a: Int}, T <: S] = {x: S, y: T}

// Check that type inference of result type does not discard errors
fun test =
  val t: Tuple2[{a: Int, b: Int}, {a: Int}] = {      // error
    x = {a = 13, b = 14},
    y = {a = 15, b = 16, c = 17}
  }

type F[X] = {a: X}
type M = {a: Int}
type G[T <: F[T]] = {x: T}
fun test3(o: G[M]): G[M] = o // error // error

// Check that type inference of result type does not discard errors
fun main =
  val a = foo 10  // error

  foo {a = 20}

  val b = foo[{b: Int}] {b = 10} // error

  test1 5 false // error
